plugins {
    id 'com.android.application'
}

android {
    namespace 'at.rihnet.rihnetlogistikmde'
    compileSdkVersion 36
    buildToolsVersion '36.0.0'

    defaultConfig {
        applicationId "at.rihnet.rihnetlogistikmde"
        minSdk 30
        versionCode 42
        versionName "25.12.14"
        multiDexEnabled true
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        debug {
            minifyEnabled false
        }
        release {
            minifyEnabled true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_10
        targetCompatibility JavaVersion.VERSION_1_10
    }

    buildFeatures {
        viewBinding true
    }
}

dependencies {
    def camerax_version = "1.5.2"

    implementation 'androidx.appcompat:appcompat:1.7.1'
    implementation 'androidx.multidex:multidex:2.0.1'
    implementation 'androidx.core:core:1.17.0'
    implementation 'androidx.core:core-ktx:1.17.0'
    implementation 'com.google.android.material:material:1.14.0-alpha08'
    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.10.0'
    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.10.0'
    implementation 'androidx.navigation:navigation-fragment:2.9.6'
    implementation 'androidx.navigation:navigation-ui:2.9.6'
    implementation 'androidx.preference:preference:1.2.1'

    //implementation 'androidx.recyclerview:recyclerview:1.4.0'

    implementation 'net.sourceforge.jtds:jtds:1.3.1'

    implementation "androidx.camera:camera-camera2:$camerax_version"
    implementation "androidx.camera:camera-lifecycle:$camerax_version"
    implementation "androidx.camera:camera-view:$camerax_version"

    implementation 'com.github.datalogic:datalogic-android-sdk:1.34'

    implementation 'androidx.annotation:annotation:1.9.1'
    implementation 'com.squareup.okhttp3:okhttp:5.3.2'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.20.1'
    implementation 'androidx.room:room-runtime:2.8.4'
    implementation 'androidx.activity:activity:1.12.2'

    //implementation 'com.microsoft.sqlserver:mssql-jdbc:9.4.0.jre8'
    //implementation 'com.microsoft.sqlserver:mssql-jdbc:9.2.0.jre8'

    annotationProcessor 'androidx.room:room-compiler:2.8.4'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.3.0'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0'
}
